updated gitignore to work with the here pacakge, but ignore the vector data

--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,4 @@ agg_all.RData
 QGIS_files/base_map_frankenstein_v2.ggz
 QGIS_files/final_mapasbosques.qgz
 QGIS_files/final_mapasbosques_AGU.qgz
-
+vector_data/
