--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ QGIS_files/base_map_frankenstein_v2.ggz
 QGIS_files/final_mapasbosques.qgz
 QGIS_files/final_mapasbosques_AGU.qgz
 vector_data/
+downloads/
