--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Authors@R:
            comment = c(ORCID = "0000-0003-1338-2020"))
            )
 Description: Set of tools to extract agreement metrics between different forest cover datasets, extract highest agreement levels and systematically download and assemble yearly harmonized forest cover maps for the coutry of Colombia.
-License: License: MIT + file LICENSE
+License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
