--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ QGIS_files/final_mapasbosques.qgz
 QGIS_files/final_mapasbosques_AGU.qgz
 vector_data/
 downloads/
+Documentation/.DS_Store
 .DS_Store
 reference/
 tmp/
