--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ QGIS_files/base_map_frankenstein_v2.ggz
 QGIS_files/final_mapasbosques.qgz
 QGIS_files/final_mapasbosques_AGU.qgz
 vector_data/
+outs/
 downloads/
 Documentation/.DS_Store
 .DS_Store
